2006-04-18  Paolo Bonzini  <bonzini@gnu.org>

PR target/27117

	Partial revert of revision 112637
	2006-04-03  Paolo Bonzini  <bonzini@gnu.org>
		    Dale Johannesen  <dalej@apple.com>

	PR target/19653
	* regclass.c (struct reg_pref): Update documentation.
	(regclass): Set prefclass to NO_REGS if memory is the best option.
	(record_reg_classes): Cope with a prefclass set to NO_REGS.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113026 138bc75d-0d04-0410-961f-82ee72b054a4